# second-brain

./: .gitignore  .mcp.json  README.md  second brain.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/queries/: README.md  admin-agent-audit.kql  capture-trace.kql  recent-failures.kql  system-health.kql
backend/scripts/: cleanup_foundry_thread_id.py  create_eval_containers.py  foundry_probe.py  foundry_probe_compare.py  golden_dataset_seed.json  investigate.py  migrate_shopping_to_errands.py  seed_admin_golden_dataset.py  seed_destinations.py  seed_golden_dataset.py
backend/scripts/admin_golden_seed/: cases.yaml
backend/scripts/archive/: create_tasks_container.py
backend/src/second_brain/: __init__.py  auth.py  config.py  investigation_client.py  main.py  warmup.py
backend/src/second_brain/agents/: __init__.py  admin.py  classifier.py  echo.py  investigation.py  middleware.py  orchestrator.py  perception.py  workflow.py
backend/src/second_brain/api/: __init__.py  capture.py  errands.py  eval.py  feedback.py  health.py  inbox.py  investigate.py  shopping_lists.py  tasks.py  telemetry.py
backend/src/second_brain/cosmos/: __init__.py  inbox_conversation_history.py
backend/src/second_brain/db/: __init__.py  blob_storage.py  cosmos.py
backend/src/second_brain/eval/: __init__.py  dry_run_tools.py  foundry.py  invoker.py  metrics.py  runner.py
backend/src/second_brain/mcp_parity/: canonical_queries.py  runner.py
backend/src/second_brain/models/: __init__.py  documents.py
backend/src/second_brain/observability/: client.py  kql_templates.py  models.py  queries.py  span_processor.py
backend/src/second_brain/processing/: admin_handoff.py
backend/src/second_brain/spine/: agent_emitter.py  api.py  auth.py  background.py  cosmos_request_id.py  evaluator.py  ledger_policy.py  middleware.py  models.py  registry.py  storage.py  stream_wrapper.py
backend/src/second_brain/streaming/: adapter.py  investigation_adapter.py  sse.py
backend/src/second_brain/tools/: __init__.py  admin.py  classification.py  cosmos_crud.py  investigation.py  recipe.py  transcription.py
backend/tests/: conftest.py  test_admin_eval_baseline_seeded.py  test_admin_handoff.py  test_admin_integration.py  test_admin_task_tools.py  test_admin_tools.py  test_agui_endpoint.py  test_app_startup_smoke.py  test_audit_api.py  test_audit_chains.py  test_audit_instrumentation_warning.py  test_audit_integration.py  test_audit_mcp_tool.py  test_audit_models.py  test_audit_native_lookup_facade.py  test_audit_native_queries.py  test_audit_walker_integrity.py  test_audit_walker_misattribution.py  test_audit_walker_orphans.py  test_audit_walker_sample.py  test_auth.py  test_classification.py  test_classifier_integration.py  test_config.py  test_cosmos_crud.py  test_cosmos_request_id_propagation.py  test_cosmos_trace_headers_coverage.py  test_deployed_health.py  test_documents_models.py  test_errands_api.py  test_eval.py  test_eval_dry_run.py  test_eval_metrics.py  test_event_tracing.py  test_feedback.py  test_foundry_credential_shape.py  test_foundry_eval.py  test_health.py  test_inbox_api.py  test_inbox_delete.py  (+43 more)
backend/tests/fixtures/: FIXTURE-CAPTURE-LOG.md  eval-baseline-pre-migration.json
backend/tests/fixtures/admin/: affinity_rule_edit.expected-deltas.md  affinity_rule_edit.input.json  affinity_rule_edit.spans.json  affinity_rule_edit.sse.jsonl  destination_management.expected-deltas.md  destination_management.input.json  destination_management.spans.json  destination_management.sse.jsonl  errand_routing.expected-deltas.md  errand_routing.input.json  errand_routing.spans.json  errand_routing.sse.jsonl  recipe_extraction.expected-deltas.md  recipe_extraction.input.json  recipe_extraction.spans.json  recipe_extraction.sse.jsonl  task_creation.expected-deltas.md  task_creation.input.json  task_creation.spans.json  task_creation.sse.jsonl
backend/tests/fixtures/classifier/: deliberate_misunderstood.expected-deltas.md  deliberate_misunderstood.input.json  deliberate_misunderstood.spans.json  deliberate_misunderstood.sse.jsonl  low_confidence_followup.expected-deltas.md  low_confidence_followup.input.json  low_confidence_followup.spans.json  low_confidence_followup.sse.jsonl  text_admin_errand.expected-deltas.md  text_admin_errand.input.json  text_admin_errand.spans.json  text_admin_errand.sse.jsonl  text_admin_task.expected-deltas.md  text_admin_task.input.json  text_admin_task.spans.json  text_admin_task.sse.jsonl  text_idea.expected-deltas.md  text_idea.input.json  text_idea.spans.json  text_idea.sse.jsonl  text_person.expected-deltas.md  text_person.input.json  text_person.spans.json  text_person.sse.jsonl  text_project.expected-deltas.md  (+7 more)
mcp/: .env.example  parity_check.py  pyproject.toml  server.py
(+765 files in other folders)
