[project]
name = "second-brain-backend"
version = "0.1.0"
description = "The Active Second Brain - AG-UI backend server with multi-agent orchestration"
requires-python = ">=3.12"
dependencies = [
    # Agent Framework + AG-UI (installs agent-framework-core, fastapi, uvicorn)
    # NOTE: requires --prerelease=allow during install (RC packages)
    "agent-framework-ag-ui",
    # Azure services
    "azure-cosmos",
    "azure-identity",
    "azure-keyvault-secrets",
    # Configuration
    "pydantic-settings",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "agent-framework-devui",
]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/second_brain"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
