[project]
name = "second-brain-backend"
version = "0.1.0"
description = "The Active Second Brain - FastAPI backend with Azure AI Foundry Agent Service"
requires-python = ">=3.12"
dependencies = [
    # Agent Framework -- Foundry integration (RC, requires --prerelease=allow for uv install)
    "agent-framework-azure-ai",
    # Azure services
    "azure-cosmos",
    "azure-identity",
    "azure-keyvault-secrets",
    "azure-storage-blob",
    # Observability -- Application Insights via OTel distro
    "azure-monitor-opentelemetry>=1.8.6",
    "azure-core-tracing-opentelemetry",
    # Async HTTP transport (required by azure-identity async credentials)
    "aiohttp",
    # Required by FastAPI for UploadFile
    "python-multipart",
    # Configuration
    "pydantic-settings",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "ruff",
]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/second_brain"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.per-file-ignores]
# main.py must call load_dotenv() and configure_azure_monitor() before other imports
"src/second_brain/main.py" = ["E402", "I001"]
# Document models use camelCase field names to match Cosmos DB JSON schema
"src/second_brain/models/documents.py" = ["N815"]
# Classification tools access camelCase ClassificationMeta fields
"src/second_brain/tools/classification.py" = ["N815"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
